<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_screen_title">Поиск</string>
    <string name="library_screen_title">Медиатека</string>
    <string name="settings_screen_title">Настройки</string>
    <string name="create_playlist_screen_title">Новый плейлист</string>
    <string name="edit_playlist_screen_title">Редактировать</string>

    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="search_button_desc">Найти трек или исполнителя</string>
    <string name="arrow_back_button_desc">Вернуться к предыдущему экрану</string>
    <string name="switch_mode_desc">Сменить тему приложения</string>
    <string name="share_button_desc">Поделиться приложением</string>
    <string name="support_button_desc">Написать в поддержку</string>
    <string name="user_agreement_desc">Открыть пользовательское соглашение</string>

    <string name="share_app_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_target_mail">tatjana.solov2014@yandex.ru</string>
    <string name="support_subject_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_line_default">Поиск</string>
    <string name="search_line_desc">Ввести трек или исполнителя</string>
    <string name="edit_text_btn_close_desc">Очистить строку ввода</string>

    <string name="artist_art_desc">Обложка трека</string>

    <string name="track_name_1">Smells Like Teen Spirit</string>
    <string name="track_artist_name_1">Nirvana</string>
    <string name="track_time_1">5:01</string>
    <string name="track_art_link_1">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>

    <string name="track_name_2">Billie Jean</string>
    <string name="track_artist_name_2">Michael Jackson</string>
    <string name="track_time_2">4:35</string>
    <string name="track_art_link_2">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>

    <string name="track_name_3">Stayin\' Alive</string>
    <string name="track_artist_name_3">Bee Gees</string>
    <string name="track_time_3">4:10</string>
    <string name="track_art_link_3">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>

    <string name="track_name_4">Whole Lotta Love</string>
    <string name="track_artist_name_4">Led Zeppelin</string>
    <string name="track_time_4">5:33</string>
    <string name="track_art_link_4">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>

    <string name="track_name_5">Sweet Child \'Mine</string>
    <string name="track_artist_name_5">Guns N\' Roses</string>
    <string name="track_time_5">5:03</string>
    <string name="track_art_link_5">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>

    <string name="message_nothing_found">Ничего не нашлось</string>
    <string name="message_bad_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="message_something_went_wrong">Что-то пошло не так</string>

    <string name="update">Обновить</string>

    <string name="base_url_itunes_search_api">https://itunes.apple.com</string>

    <string name="history_title">Вы искали</string>
    <string name="history_clear_btn">Очистить историю</string>

    <string name="track_duration_title">Длительность</string>
    <string name="track_album_title">Альбом</string>
    <string name="track_year_title">Год</string>
    <string name="track_genre_title">Жанр</string>
    <string name="track_country_title">Страна</string>
    <string name="track_current_time_placeholder">00:00</string>
    <string name="track_cover_desc">Обложка трека</string>
    <string name="btn_add_track_to_playlist_desc">Добавить трек в плейлист</string>
    <string name="btn_add_track_to_favorite_desc">Добавить трек в избранное</string>
    <string name="btn_play_desc">Начать/остановить воспроизведение трека</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favorite_tracks_message">Ваша медиатека пуста</string>
    <string name="empty_playlists_message">Вы не создали\nни одного плейлиста</string>
    <string name="btn_new_playlist">Новый плейлист</string>

    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="btn_create_playlist">Создать</string>
    <string name="back_title">Завершить создание плейлиста?</string>
    <string name="back_message">Все несохраненные данные будут потеряны</string>
    <string name="back_ok">Завершить</string>
    <string name="back_cancel">Отмена</string>
    <string name="permission_open_app_setting_title">Перейти в настройки приложения?</string>
    <string name="permission_read_media_images_message">Для загрузки фото необходимо предоставить разрешение</string>
    <string name="permission_notifications_message">Для проигрывания трека необходимо разрешение на показ уведомлений</string>
    <string name="permission_ok">Перейти</string>
    <string name="permission_cancel">Отмена</string>
    <string name="snackbar_playlist">Плейлист</string>
    <string name="snackbar_created">создан</string>
    <string name="snackbar_already_exists">уже существует</string>

    <string name="playlist_title_test">Музыка для хорошего вечера</string>
    <string name="playlist_tracks_count_test">5 треков</string>
    <string name="playlist_cover_description">Обложка плейлиста</string>
    <string name="menu_item_delete">Удалить</string>

    <string name="bottom_sheet_player_title">Добавить в плейлист</string>
    <string name="snackbar_success_adding_track_to_playlist">Добавлено в плейлист</string>
    <string name="snackbar_track_already_exists_in_playlist">Трек уже добавлен в плейлист</string>

    <string name="zero_tracks">треков</string>
    <string name="one_track">трек</string>
    <string name="few_tracks">трека</string>
    <string name="many_tracks">треков</string>
    <string name="other_tracks">треков</string>

    <string name="zero_minutes">минут</string>
    <string name="one_minute">минута</string>
    <string name="few_minutes">минуты</string>
    <string name="many_minutes">минут</string>
    <string name="other_minutes">минут</string>

    <plurals name="plurals_1">
        <item quantity="zero">%1$d = zero</item>
        <item quantity="one">%1$d = one</item>
        <item quantity="two">%1$d = two</item>
        <item quantity="few">%1$d = few</item>
        <item quantity="many">%1$d = many</item>
        <item quantity="other">%1$d = other</item>
    </plurals>
    <plurals name="track_plurals">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="minute_plurals">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="dialog_delete_track">Хотите удалить трек?</string>
    <string name="dialog_delete_playlist">Хотите удалить плейлист \"</string>
    <string name="question">\"\?</string>
    <string name="dialog_btn_yes">Да</string>
    <string name="dialog_btn_no">Нет</string>
    <string name="snackbar_nothing_tracks_for_sharing_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="btn_save_playlist">Сохранить</string>
    <string name="snackbar_playlist_without_changes">Нет изменений для сохранения</string>
    <string name="empty_playlist_track_list_message">В этом плейлисте нет треков</string>

    <string name="snackbar_no_network_connection">Отсутствует подключение к интернету</string>

    <string name="snackbar_no_notification_permission">Для проигрывания трека необходимо разрешение на показ уведомлений</string>
    <string name="snackbar_action_open_settings">Настройки</string>
    <string name="player_notification_channel_description">Channel for playing music</string>
    <string name="snackbar_reload_screen_after_permission">Разрешение дано. Перезапустите экран</string>

    <string name="open_player_desc">Открыть экран с деталями трека</string>
    <string name="placeholder_text">Placeholder</string>

</resources>