<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_screen_background"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings_screen"
        style="@style/ToolbarStyle"
        app:title="@string/settings_button_text" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_mode"
        style="@style/MenuItemStyle"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/switch_mode_desc"
        android:text="@string/dark_mode" />

    <TextView
        android:id="@+id/share_app"
        style="@style/MenuItemStyle"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/support"
        style="@style/MenuItemStyle"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/user_agreement"
        style="@style/MenuItemStyle"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_user_agreement" />

</LinearLayout>