<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_screen"
    style="@style/ScreenStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_search_screen"
        style="@style/ToolbarWithIconColorStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:title="@string/search_button_text" />

    <FrameLayout
        android:id="@+id/container_search_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="@dimen/margin_horizontal_big"
        android:layout_marginTop="@dimen/margin_top_small">

        <EditText
            android:id="@+id/search_line"
            style="@style/EditTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:autofillHints="@string/search_line_desc"
            android:drawableStart="@drawable/ic_search_16"
            android:hint="@string/search_line_default" />

        <ImageView
            android:id="@+id/clearIcon_search_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/icon_indentation_normal"
            android:layout_marginEnd="@dimen/icon_indentation_normal"
            android:backgroundTint="?attr/colorSecondary"
            android:contentDescription="@string/edit_text_btn_close_desc"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="?attr/colorOnSecondary" />
    </FrameLayout>

</LinearLayout>