<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/playlist_item_layout_height_60"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_playlistCover"
            android:layout_width="@dimen/playlist_cover_layout_size_45"
            android:layout_height="@dimen/playlist_cover_layout_size_45"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/indentation_13"
            android:contentDescription="@string/playlist_cover_description"
            tools:src="@drawable/ic_placeholder_45" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_playlist_title"
                style="@style/TextRegular16ColorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation_8"
                android:layout_marginEnd="@dimen/indentation_16"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/playlist_title_test" />

            <TextView
                android:id="@+id/tv_playlist_tracks_count"
                style="@style/TextRegular11ColorOnSecondaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation_8"
                android:layout_marginTop="@dimen/indentation_1"
                android:layout_marginEnd="@dimen/indentation_16"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/playlist_tracks_count_test" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>