<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_screen"
    style="@style/ScreenCommonStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_navigation_view_height"
    tools:context=".search.ui.fragment.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ScreenCommonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_search_screen"
            style="@style/ToolbarColorOnPrimaryStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/search_button_text" />

        <EditText
            android:id="@+id/search_line"
            style="@style/EditTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginHorizontal="@dimen/indentation_16"
            android:layout_marginVertical="@dimen/indentation_8"
            android:autofillHints="@string/search_line_desc"
            android:drawableStart="@drawable/ic_search_16"
            android:hint="@string/search_line_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_search_screen"
            android:inputType="text"/>

        <ImageView
            android:id="@+id/clearIcon_search_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/indentation_12"
            android:backgroundTint="?attr/colorSecondary"
            android:contentDescription="@string/edit_text_btn_close_desc"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/search_line"
            app:layout_constraintEnd_toEndOf="@id/search_line"
            app:layout_constraintTop_toTopOf="@id/search_line"
            app:tint="?attr/colorOnSecondary" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_tags="tv_history_title, rv_history_list_search, btn_clear_history_search" />

        <TextView
            android:id="@+id/tv_history_title"
            style="@style/TextMedium19ColorOnPrimaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indentation_16"
            android:layout_marginTop="@dimen/indentation_42"
            android:text="@string/history_title"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="tv_history_title"
            app:layout_constraintTop_toBottomOf="@id/search_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history_list_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="rv_history_list_search"
            app:layout_constraintTop_toBottomOf="@id/tv_history_title"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/track" />

        <Button
            android:id="@+id/btn_clear_history_search"
            style="@style/BtnCommonColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/indentation_24"
            android:layout_marginBottom="@dimen/indentation_16"
            android:text="@string/history_clear_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="btn_clear_history_search"
            app:layout_constraintTop_toBottomOf="@id/rv_history_list_search"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_error_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_tags="iv_error_search, tv_error_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_track_list_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_line" />

        <ImageView
            android:id="@+id/iv_error_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_102"
            android:backgroundTint="@color/gray_900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="iv_error_search"
            app:layout_constraintTop_toBottomOf="@id/search_line"
            tools:src="@drawable/ic_placeholder_bad_connection_lm_120" />

        <TextView
            android:id="@+id/tv_error_search"
            style="@style/TextMedium19ColorOnPrimaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indentation_24"
            android:layout_marginTop="@dimen/indentation_16"
            android:gravity="center"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="tv_error_search"
            app:layout_constraintTop_toBottomOf="@id/iv_error_search"
            tools:text="@string/message_bad_connection" />

        <Button
            android:id="@+id/btn_error_search"
            style="@style/BtnCommonColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indentation_24"
            android:text="@string/update"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="btn_error_search"
            app:layout_constraintTop_toBottomOf="@id/tv_error_search" />

        <ProgressBar
            android:id="@+id/progress_bar_search"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/indentation_140"
            android:indeterminateTint="@color/blue_700"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>